--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -50,6 +50,7 @@
     <h1>I'm testing the application</h1>
     <h1>I'm testing the application</h1>
     <h1>I'm testing the application</h1>
+    <button onclick="console.log('working');">Click Here</button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
