--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <h1>I'm testing the application</h1>
     <h1>I'm testing the application</h1>
     <h1>I'm testing the application</h1>
-    <button onclick="console.log('working'); fbq('track', 'ButtonClick');">Click Here</button>
+    <button onclick="fbq('track', 'ViewContent'); console.log('working'); ">Click Here</button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
